# decent.ninja

./: Cargo.toml  DOCKERFILE  Dockerfile  README.md  Rocket.toml  content.json  cv.css  index.html  intro.css  k8s.yaml  showcase.css  showcase.js  skaffold.yaml  style.css
css/: cv.css  intro.css  print.css  showcase.css  style.css
src/: content.rs  main.rs
static/: showcase.js
static/css/: intro.css  showcase.css  style.css
templates/: index.hbs
