[package]
name = "decentninja2"
version = "0.1.0"
authors = ["decentninja <encrypt.wave@gmail.com>"]

[dependencies]
rocket = "0.3.9"
rocket_codegen = "0.3.9"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
error-chain = "0.11.0"

[dependencies.rocket_contrib]
version = "0.3.9"
default-features = false
features = ["handlebars_templates"]
