[package]
name = "decentninja2"
version = "0.1.0"
authors = ["decentninja <encrypt.wave@gmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
error-chain = "0.12.0"

[dependencies.rocket_contrib]
version = "0.3.17"
default-features = false
features = ["handlebars_templates"]
