[package]
name = "decentninja2"
version = "0.1.0"
authors = ["decentninja <encrypt.wave@gmail.com>"]

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
error-chain = "0.12.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates"]
